# llmgrader

./: .gitignore  README.md  _config.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_strict.txt  run.py
docs/: api_reference.md  architecture.md  development.md  getting_started.md  index.md
docs/admin/: deploy.md  htmlnotes.md  index.md  password.md  pkgconfig.md  unitxml.md  upload.md
docs/analytics/: dbviewer.md  index.md
example_repo/: llmgrader_config.xml  unit1_basic_logic.xml
example_repo/autograder/: autograde.py
example_repo/unit1/: basic_logic.xml
example_repo/unit2/: numbers.xml
graderchat/: app.py
graderchat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
graderchat/routes/: api.py
graderchat/services/: grader.py  llm_client.py  parselatex.py
graderchat/templates/: index.html
llmgrader/: app.py  config.py
llmgrader/gradescope/: autograde.py  run_autograder
llmgrader/routes/: api.py  main.py
llmgrader/scripts/: build_autograder.py  create_qfile.py  create_soln_pkg.py
llmgrader/services/: autograde_llm_latex.py  grader.py  llm_client.py  parselatex.py  parselatex_v1.py
llmgrader/templates/: admin.html  admin_dbviewer.html  admin_submission_detail.html  dashboard.html  index.html
llmgrader/utils/: create_grading_json.py  latextotxt.py
soln_repos/autograder/: requirements.txt  setup.sh
soln_repos/example_questions/: units.csv
tests/: test_autograder.py  test_llmclient.py
tests/fixtures/: grade_schema.xml  submission_fail.json  submission_full.json  submission_missing_part.json  (+1 more)
(+8 files in other folders)
