[project]
name = "llmgrader"
version = "0.1.0"
description = "Lightweight Flask-based chatbot autograder"
authors = [
    { name = "Your Name" }
]
dependencies = [
    "flask"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["llmgrader*"]

[project.scripts]
latextotxt = "llmgrader.utils.latextotxt:main"

